--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,12 +11,13 @@ on:
       - 'v*'
 
 env:
-  REGISTRY: ghcr.io
+  FILE_PATH: "Containerfile"
   IMAGE_NAME: ${{ github.repository }}
+  REGISTRY: ghcr.io
 
 jobs:
-  test:
-    name: Test
+  lint-scan:
+    name: Lint/scan image
     runs-on: ubuntu-latest
 
     steps:
@@ -33,26 +34,38 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Containerfile
-          push: false
+          file: "${{ env.FILE_PATH }}"
           load: true
-          tags: "container-hpc:test"
+          push: false
+          tags: app-image:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+        
+      - name: Lint with Dockle
+        uses: goodwithtech/dockle-action@main
+        with:
+          image: app-image:${{ github.sha }}
+          format: 'list'
+          exit-code: '0'
+          exit-level: 'warn'
 
-      # - name: Run image
-      #   working-directory: .
-      #   run: |
-      #     docker run --name test-container -d --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:rw --cgroupns=host container-hpc:test
-
-      # - name: Test image
-      #   working-directory: .
-      #   run: |
-      #     docker exec --tty test-container env TERM=xterm 'echo "hello world"'
+      - name: Scan with Trivy
+        continue-on-error: true
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: app-image:${{ github.sha }}
+          format: 'table'
+          exit-code: '0'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+          timeout: "10m"
 
   release:
     name: Release
     runs-on: ubuntu-latest
     needs:
-      - test
+      - lint-scan
     if: ${{ startsWith(github.event.ref, 'refs/tags/v') }}
 
     permissions:
@@ -82,9 +95,6 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -92,7 +102,9 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Containerfile
+          file: "${{ env.FILE_PATH }}"
           push: true
           labels: ${{ steps.metadata.outputs.labels }}
           tags: ${{ steps.metadata.outputs.tags }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
